# karaoke_cpp

./: .gitignore  CMakeLists.txt  README.md  separator
src/: ExternalTools.cpp  ExternalTools.hpp  LyricsEngine.cpp  LyricsEngine.hpp  main.cpp
